# wasm-async-exceptions

./: .gitignore  CMakeLists.txt  README.md  package-lock.json  package.json  playwright.config.ts  tsconfig.json
docs/: background.md  background_ko.md  design.md  design_ko.md  findings.md  findings_ko.md  matrix.md  matrix_ko.md  metrics.md  metrics_ko.md  presentation.md  presentation_ko.md
docs/superpowers/plans/: 2026-07-01-phase0-bootstrap-and-s1-baseline.md  2026-07-01-phase1-target-a-pitfall-reproduction.md  2026-07-01-phase2-targets-b-and-c-partial-improvement.md  2026-07-02-cmake-build.md  2026-07-02-phase25-targets-e-and-ep-coroutines.md  2026-07-02-phase3-target-d-jspi-wasm-eh.md  2026-07-02-phase35-metrics.md  2026-07-07-blog-draft-polish.md  2026-07-07-live-exception-edge-scenarios.md  2026-07-07-s11-s17-exception-edge-controls.md  2026-07-07-s8-multi-yield-call-chain.md
docs/superpowers/specs/: 2026-07-02-cmake-build-design.md  2026-07-07-blog-draft-polish-design.md  2026-07-07-s11-s17-exception-edge-controls-design.md  2026-07-07-s8-multi-yield-call-chain-design.md
examples/A/s1/: EXPECT.md  build.sh  run.sh
examples/A/s10/: EXPECT.md  build.sh
examples/A/s11/: EXPECT.md  build.sh
examples/A/s12/: EXPECT.md  build.sh
examples/A/s13/: EXPECT.md  build.sh
examples/A/s14/: EXPECT.md  build.sh
examples/A/s15/: EXPECT.md  build.sh
examples/A/s16/: EXPECT.md  build.sh
examples/A/s17/: EXPECT.md  build.sh  run.sh
examples/A/s2/: EXPECT.md  build.sh  run.sh
examples/A/s3/: EXPECT.md  build.sh  run.sh
examples/A/s4/: EXPECT.md  build.sh  run.sh
examples/A/s5/: EXPECT.md  build.sh  run.sh
examples/A/s6/: EXPECT.md  build.sh  run.sh
examples/A/s7/: EXPECT.md  build.sh  run.sh
examples/A/s8/: EXPECT.md  build.sh
examples/A/s9/: EXPECT.md  build.sh
examples/B/s1/: EXPECT.md  build.sh  run.sh
examples/B/s10/: EXPECT.md  build.sh
examples/B/s11/: EXPECT.md  build.sh
examples/B/s12/: EXPECT.md  build.sh
examples/B/s13/: EXPECT.md  build.sh
examples/B/s14/: EXPECT.md  build.sh
examples/B/s15/: EXPECT.md  build.sh
examples/B/s16/: EXPECT.md  build.sh
examples/B/s17/: EXPECT.md  build.sh
examples/B/s2/: EXPECT.md  build.sh  run.sh
examples/B/s3/: EXPECT.md  build.sh  run.sh
examples/B/s4/: EXPECT.md  build.sh  run.sh
examples/B/s5/: EXPECT.md  build.sh  run.sh
examples/B/s6/: EXPECT.md  build.sh  run.sh
examples/B/s7/: EXPECT.md  build.sh  run.sh
examples/B/s8/: EXPECT.md  build.sh
examples/B/s9/: EXPECT.md  build.sh
examples/C/s1/: EXPECT.md  build.sh  run.sh
examples/C/s2/: EXPECT.md  build.sh  run.sh
examples/C/s3/: EXPECT.md  build.sh  run.sh
examples/C/s4/: EXPECT.md  build.sh  run.sh
examples/D/s1/: EXPECT.md  build.sh  run.sh
examples/D/s10/: EXPECT.md  build.sh
examples/D/s11/: EXPECT.md  build.sh
examples/D/s12/: EXPECT.md  build.sh
examples/D/s13/: EXPECT.md  build.sh
examples/D/s14/: EXPECT.md  build.sh
examples/D/s15/: EXPECT.md  build.sh
examples/D/s16/: EXPECT.md  build.sh
examples/D/s17/: EXPECT.md  build.sh
examples/D/s2/: EXPECT.md  build.sh  run.sh
examples/D/s3/: EXPECT.md  build.sh  run.sh
examples/D/s4/: EXPECT.md  build.sh  run.sh
examples/D/s5/: EXPECT.md  build.sh  run.sh
examples/D/s6/: EXPECT.md  build.sh  run.sh
examples/D/s7/: EXPECT.md  build.sh  run.sh
examples/D/s8/: EXPECT.md  build.sh
examples/D/s9/: EXPECT.md  build.sh
examples/E/s1/: EXPECT.md  build.sh  run.sh
examples/E/s2/: EXPECT.md  build.sh  run.sh
examples/E/s3/: EXPECT.md  build.sh  run.sh
examples/E/s4/: EXPECT.md  build.sh  run.sh
examples/Ep/s1/: EXPECT.md  build.sh  run.sh
examples/Ep/s2/: EXPECT.md  build.sh  run.sh
examples/Ep/s3/: EXPECT.md  build.sh  run.sh
examples/Ep/s4/: EXPECT.md  build.sh  run.sh
scripts/: build-all-examples.sh  collect-size-metrics.sh  toolchain.sh
src/: coro_glue.cpp  coro_glue.h  coro_glue.js  page_template.html  page_template_coro.html  page_template_jspi.html  runtime_helpers.cpp  runtime_helpers.h  test_harness.js  test_harness_coro.js
src/scenarios/: S1.cpp  S10.cpp  S11.cpp  S12.cpp  S13.cpp  S14.cpp  S15.cpp  S16.cpp  S17.cpp  S2.cpp  S3.cpp  S4.cpp  S5.cpp  S6.cpp  S7.cpp  S8.cpp  S9.cpp
src/scenarios_coro/: S1.cpp  S2.cpp  S3.cpp  S4.cpp
tests/: _features.spec.ts  _metrics.spec.ts  _repo_contract.spec.ts  _resolve_scenarios.ts
tests/A/: s1.spec.ts  s10.spec.ts  s11.spec.ts  s12.spec.ts  s13.spec.ts  s14.spec.ts  s15.spec.ts  s16.spec.ts  s17.spec.ts  s2.spec.ts  s3.spec.ts  s4.spec.ts  s5.spec.ts  s6.spec.ts  s7.spec.ts  s8.spec.ts  s9.spec.ts
tests/A/s10.spec.ts-snapshots/: A-S10-console-darwin.txt
tests/A/s12.spec.ts-snapshots/: A-S12-console-darwin.txt
tests/A/s13.spec.ts-snapshots/: A-S13-console-darwin.txt
tests/B/: s1.spec.ts  s10.spec.ts  s11.spec.ts  s12.spec.ts  s13.spec.ts  s14.spec.ts  s15.spec.ts  s16.spec.ts  s17.spec.ts  s2.spec.ts  s3.spec.ts  s4.spec.ts  s5.spec.ts  s6.spec.ts  s7.spec.ts  s8.spec.ts  s9.spec.ts
tests/C/: s1.spec.ts  s2.spec.ts  s3.spec.ts  s4.spec.ts
tests/D/: s1.spec.ts  s10.spec.ts  s11.spec.ts  s12.spec.ts  s13.spec.ts  s14.spec.ts  s15.spec.ts  s16.spec.ts  s17.spec.ts  s2.spec.ts  s3.spec.ts  s4.spec.ts  s5.spec.ts  s6.spec.ts  s7.spec.ts  s8.spec.ts  s9.spec.ts
tests/E/: s1.spec.ts  s2.spec.ts  s3.spec.ts  s4.spec.ts
tests/Ep/: s1.spec.ts  s2.spec.ts  s3.spec.ts  s4.spec.ts
(+32 files in other folders)
